--- a/playground/tailwind-v4/src/layouts/base-layout/base-layout.css
+++ b/playground/tailwind-v4/src/layouts/base-layout/base-layout.css
@@ -4,9 +4,9 @@
  */
 
 .base-layout {
-	@apply min-h-screen bg-surface-950 text-surface-100 antialiased;
+	@apply min-h-screen antialiased bg-surface-50 dark:bg-surface-950 text-surface-900 dark:text-surface-50 transition-colors duration-200;
 }
 
 .base-layout main {
-	@apply max-w-5xl mx-auto px-6 py-16;
+	@apply max-w-7xl px-6 mx-auto pt-24;
 }
