--- a/apps/docs/src/components/switch/switch.css
+++ b/apps/docs/src/components/switch/switch.css
@@ -6,7 +6,7 @@
 
 .radiant-switch {
 	.thumb {
-		@apply block absolute top-1/2 w-[var(--thumb-size)] h-[var(--thumb-size)];
+		@apply block absolute top-1/2 w-(--thumb-size) h-(--thumb-size);
 		@apply bg-on-background rounded-full transform -translate-y-1/2 transition-transform ease-in-out duration-200 pointer-events-none;
 	}
 
@@ -15,7 +15,7 @@
 	}
 
 	.switch {
-		@apply relative w-[--switch-width] h-[--switch-height] bg-on-background/20;
+		@apply relative w-(--switch-width) h-(--switch-height) bg-on-background/20;
 		@apply rounded-full p-1 cursor-pointer transition-colors;
 		&:hover {
 			@apply bg-on-background/30;
@@ -40,5 +40,5 @@
 
 .radiant-switch[checked='true'] .thumb {
 	@apply bg-on-primary;
-	transform: translate(calc(var(--switch-width) - var(--thumb-size) - 0.5rem), -50%);
+	translate: calc(var(--switch-width) - var(--thumb-size) - 0.5rem) -50%;
 }
