feat(react-router): Added layout as part of the config and Improved react router to be a simple plugin for the react integration.

--- a/apps/docs/src/styles/tailwind.css
+++ b/apps/docs/src/styles/tailwind.css
@@ -6,5 +6,5 @@
 @import './vendor/shiki.css';
 
 body {
-	@apply bg-background text-on-background min-h-[100svh] w-screen overflow-x-hidden font-sans;
+	@apply bg-background text-on-background min-h-svh w-screen overflow-x-hidden font-sans;
 }
