--- a/packages/core/__fixtures__/app/src/pages/404.css
+++ b/packages/core/__fixtures__/app/src/pages/404.css
@@ -12,7 +12,9 @@
 	max-width: fit-content;
 	margin-left: auto;
 	margin-right: auto;
-	box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+	box-shadow:
+		0 4px 6px -1px rgb(0 0 0 / 0.1),
+		0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
 .error404 h1 {
