--- a/examples/starter-lit-jsx/src/styles/tailwind.css
+++ b/examples/starter-lit-jsx/src/styles/tailwind.css
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@layer theme, base, components, utilities;
+
+@import 'tailwindcss/theme.css' layer(theme);
+@import 'tailwindcss/utilities.css' layer(utilities);
 
 .prose {
 	h1 {
