--- a/playground/react-router/src/layouts/base-layout/base-layout.css
+++ b/playground/react-router/src/layouts/base-layout/base-layout.css
@@ -26,17 +26,8 @@
 	@apply hover:text-link transition-colors;
 }
 
-@keyframes fade-in {
-	from {
-		opacity: 0;
-	}
-	to {
-		opacity: 1;
-	}
-}
-
 .main-content {
-	@apply max-w-3xl mx-auto px-6 py-12 w-full grow animate-[fade-in_500ms_ease-out];
+	@apply max-w-3xl mx-auto px-6 py-12 w-full grow;
 }
 
 .site-footer {
