--- a/apps/docs/src/styles/fonts.css
+++ b/apps/docs/src/styles/fonts.css
@@ -3,7 +3,7 @@
 	font-style: normal;
 	font-weight: 100 900;
 	font-display: swap;
-	src: url('/public/assets/fonts/geist.woff2') format('woff2');
+	src: url('/assets/fonts/geist.woff2') format('woff2');
 }
 
 @font-face {
@@ -12,7 +12,7 @@
 	font-weight: 200 900;
 	font-stretch: 100%;
 	font-display: swap;
-	src: url('/public/assets/fonts/inconsolata.woff2') format('woff2');
+	src: url('/assets/fonts/inconsolata.woff2') format('woff2');
 }
 
 @font-face {
@@ -20,7 +20,7 @@
 	font-style: normal;
 	font-weight: 200 800;
 	font-display: swap;
-	src: url('/public/assets/fonts/karla.woff2') format('woff2');
+	src: url('/assets/fonts/karla.woff2') format('woff2');
 }
 
 @font-face {
@@ -28,5 +28,5 @@
 	font-style: italic;
 	font-weight: 200 800;
 	font-display: swap;
-	src: url('/public/assets/fonts/karla-italic.woff2') format('woff2');
+	src: url('/assets/fonts/karla-italic.woff2') format('woff2');
 }
